--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "url": "https://github.com/foxglove/rosmsg2-serialization.git"
   },
   "author": {
-    "name": "Foxglove Technologies",
-    "email": "support@foxglove.dev"
+    "name": "Foxglove Technologies Inc",
+    "email": "contact@foxglove.dev"
   },
   "homepage": "https://github.com/foxglove/rosmsg2-serialization",
   "main": "dist/index.js",
@@ -42,27 +42,28 @@
     "node": ">= 14"
   },
   "devDependencies": {
-    "@foxglove/eslint-plugin": "0.10.0",
-    "@types/eslint": "^7",
+    "@foxglove/eslint-plugin": "0.13.0",
+    "@types/eslint": "^7.28.0",
     "@types/eslint-plugin-prettier": "^3",
-    "@types/jest": "^26.0.23",
-    "@types/prettier": "2.3.0",
-    "@typescript-eslint/eslint-plugin": "4.28.0",
-    "@typescript-eslint/parser": "4.28.0",
-    "esbuild": "0.12.9",
+    "@types/jest": "^26.0.24",
+    "@types/prettier": "2.3.2",
+    "@typescript-eslint/eslint-plugin": "4.28.4",
+    "@typescript-eslint/parser": "4.28.4",
+    "esbuild": "0.12.15",
     "esbuild-jest": "0.5.0",
-    "eslint": "7.29.0",
+    "eslint": "7.31.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-prettier": "3.4.0",
-    "jest": "27.0.5",
-    "prettier": "2.3.1",
-    "typescript": "4.3.4"
+    "jest": "27.0.6",
+    "prettier": "2.3.2",
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "@foxglove/cdr": "^0.2.1",
-    "@foxglove/rosmsg": "^0.2.0",
+    "@foxglove/cdr": "^1.0.0",
+    "@foxglove/rosmsg": "^1.0.0",
     "@foxglove/rostime": "^1.1.0"
   }
 }
