MessageWriter (CDR serialization)

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
+  "setupFilesAfterEnv": ["@sounisi5011/jest-binary-data-matchers"],
   "testMatch": ["<rootDir>/src/**/*.test.ts"],
   "transform": {
     "^.+\\.ts$": "ts-jest"
