--- a/package.json
+++ b/package.json
@@ -42,27 +42,28 @@
     "node": ">= 14"
   },
   "devDependencies": {
-    "@foxglove/eslint-plugin": "0.14.0",
-    "@sounisi5011/jest-binary-data-matchers": "1.2.0",
-    "@types/jest": "^27.0.1",
-    "@types/prettier": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "4.29.2",
-    "@typescript-eslint/parser": "4.29.2",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
+    "@foxglove/eslint-plugin": "0.21.0",
+    "@foxglove/rosmsg": "^4.0.0",
+    "@sounisi5011/jest-binary-data-matchers": "1.2.1",
+    "@types/jest": "^29.4.0",
+    "@types/prettier": "^2.7.2",
+    "@typescript-eslint/eslint-plugin": "5.54.0",
+    "@typescript-eslint/parser": "5.54.0",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-es": "4.1.0",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.24.0",
-    "eslint-plugin-jest": "24.4.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "jest": "27.0.6",
-    "prettier": "2.3.2",
-    "ts-jest": "27.0.5",
-    "typescript": "4.3.5"
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "27.2.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "29.4.3",
+    "prettier": "2.8.4",
+    "ts-jest": "29.0.5",
+    "typescript": "4.9.5"
   },
   "dependencies": {
     "@foxglove/cdr": "^2.0.0",
-    "@foxglove/rosmsg": "^3.1.0",
+    "@foxglove/message-definition": "^0.2.0",
     "@foxglove/rostime": "^1.1.2"
   }
 }
