--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   ],
   "scripts": {
     "build": "tsc -b",
-    "lint:ci": "eslint --report-unused-disable-directives .",
-    "lint": "eslint --report-unused-disable-directives --fix .",
+    "lint:ci": "eslint .",
+    "lint": "eslint --fix .",
     "prepack": "yarn build",
     "prepublishOnly": "yarn lint:ci && yarn test",
     "test": "jest"
@@ -42,28 +42,22 @@
     "node": ">= 14"
   },
   "devDependencies": {
-    "@foxglove/eslint-plugin": "0.21.0",
+    "@foxglove/eslint-plugin": "2.0.0",
     "@foxglove/rosmsg": "4.2.1",
     "@sounisi5011/jest-binary-data-matchers": "1.2.1",
     "@types/jest": "^29.4.0",
-    "@types/prettier": "^2.7.2",
-    "@typescript-eslint/eslint-plugin": "5.54.0",
-    "@typescript-eslint/parser": "5.54.0",
-    "eslint": "8.35.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-es": "4.1.0",
-    "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "27.2.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.4.3",
-    "prettier": "2.8.4",
-    "ts-jest": "29.0.5",
-    "typescript": "4.9.5"
+    "@types/prettier": "^3.0.0",
+    "eslint": "9.16.0",
+    "jest": "29.7.0",
+    "prettier": "3.4.1",
+    "ts-jest": "29.2.5",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.17.0"
   },
   "dependencies": {
     "@foxglove/cdr": "^3.0.0",
     "@foxglove/message-definition": "^0.2.0",
     "@foxglove/rostime": "^1.1.2"
-  }
+  },
+  "packageManager": "yarn@4.5.3"
 }
