--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "devDependencies": {
     "@foxglove/eslint-plugin": "2.0.0",
-    "@foxglove/rosmsg": "4.2.1",
+    "@foxglove/ros2idl-parser": "0.3.5",
+    "@foxglove/rosmsg": "5.0.4",
     "@sounisi5011/jest-binary-data-matchers": "1.2.1",
     "@types/jest": "^29.4.0",
     "@types/prettier": "^3.0.0",
